# itamisu

./: Cargo.toml  default.nix  flake.nix  foods.toml  readme.md  shell.nix
.github/workflows/: test.yml
src/: error.rs  lib.rs  main.rs  scheme.rs
