[package]
name = "itamisu"
version = "0.0.1"
edition = "2021"
license = "Apache-2.0"
homepage = "https://github.com/uzinfocom-org/itamisu"
repository = "https://github.com/uzinfocom-org/itamisu"
description = "A random food picker out of desperation"
authors = ["Sokhibjon Orzikulov <sakhib@orzklv.uz>"]

# Dependencies that will included with final binary
[dependencies]
clap = { version = "4.5.46", features = ["derive", "env"] }
rand = "0.9.2"
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.16"
toml = "0.9.5"

# Development dependencies which aren't used in release binary
[dev-dependencies]

# Optimize release binary as much as possible
[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
